added command to mimic startup sequence
Signed-off-by: Apfelchorle <apfelchorle@gmail.com>